# surgeist-shape

./: AGENTS.md  Cargo.toml  README.md
api/: public-api.txt
plans/: 2026-06-28-rust-modeling-compliance.md
src/: bounds.rs  dash.rs  error.rs  geometry.rs  key.rs  lib.rs  path.rs  primitive.rs  stroke.rs  tests.rs  value.rs
